--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <html>
 <head>
-	<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/3rd-framework/jquery-1.7.2.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 	<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbconfig.js"></script>
-	<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/web-content/pbloader.js"></script>
+	<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbloader.js"></script>
 
 </head>
 <body>
