--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
-	<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbconfig.js"></script>
-	<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbloader.js"></script>
+	<script src="https://local.qa.webex.com/latest/pbconfig.js"></script>
+	<script src="https://local.qa.webex.com/latest/web-content/pbloader.js"></script>
 
 </head>
 <body>
