--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		window.joinMeeting = function () {
 			var $MeetingKey = document.getElementById("MeetingKey"),
 				$siteURL = document.getElementById("siteURL"),
-				$userName = document.getElementById("userDisplayName"),
+				$userName = document.getElementById("userDisplayName");
 				
 
 			window.pbLoader.launchMeeting({
