--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>For v3 new loader</title>
 	<meta charset="utf-8"/>
-	<script src="https://local.qa.webex.com/latest/3rd-framework/jquery-1.7.2.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
 	
 	<style>
 		.joinForm{
@@ -51,8 +51,8 @@
 </div>
 
 	
-	<script src="https://local.qa.webex.com/latest/pbconfig.js"></script>
-	<script src="https://local.qa.webex.com/latest/web-content/pbloader.js"></script>
+	<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbconfig.js"></script>
+	<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbloader.js"></script>
 
 	<script>
 		//jump to https for development. 55555 is xiaole's port. if other need customized port, add it behind 55555.
