--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>For v3 new loader</title>
+	<title>Webex Web App SDK demo</title>
 	<meta charset="utf-8"/>
 	<script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
 
@@ -56,7 +56,7 @@
 
 
 
-<script src="https://nebulabts1.webex.com/pb/web/3.9.0.255/pbloader.js"></script>
+<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbloader.js"></script>
 
 <script>
 	window.joinMeeting = function() {
