--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
 
 
-<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbloader.js"></script>
+<!--<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbloader.js"></script>-->
+<script src="https://local.qa.webex.com/latest/web-content/pbloader.js?lang=en_US"></script>
 
 <script>
 	window.joinMeeting = function() {
