--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 	<div class="form_table">
 		<div>
 			<label id="goSiteURL" for="siteURL">Site URL*:</label>
-			<input id="siteURL" type="text">
+			<input id="siteURL" type="text">https://t29cmri1.qa.webex.com/t29cmri1</input>
 		</div>
 		<div>
 			<label for="MeetingKey">Meeting Key*:</label>
-			<input id="MeetingKey" type=text>
+			<input id="MeetingKey" type=text>110 321 506</input>
 		</div>
 		<div>
 			<label for="userDisplayName">Display Name*:</label>
-			<input id="userDisplayName" type="text">
+			<input id="userDisplayName" type="text">mickel test</input>
 		</div>
 	</div>
 	<div class="command">
@@ -56,9 +56,9 @@
 
 
 
-<!--<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbloader.js"></script>-->
+<script src="https://t29cmri1.qa.webex.com/pb/web/latest3.0/pbloader.js"></script>
 	
-<script src="https://local.qa.webex.com/latest/web-content/pbloader.js?lang=en_US"></script>
+<!--<script src="https://local.qa.webex.com/latest/web-content/pbloader.js?lang=en_US"></script>-->
 	
 
 <script>
