--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Join Webex Meeting</title>
+	<title>Wechat Mini Program Join Webex Demo</title>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
 	<script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
